# whiz

./: COPYING  Makefile  README.TXT  README.md
debug/: debug.cpp  debug.h
dic/: connect.dic  connect.inx  forms.dic  grammar.dic  whiz.inx
engine/: whiz.h  whizdic.h
immodule/_ng/: im.c
jrkanji/: Makefile.am  canna_mode.h  jrkanji.cpp  jrkanji.h  keydef.h  whiz_conv_table.cpp  whiz_conv_table.h
rpm/: install.sh  knx-whiz.tar.bz2  whiz.i  whiz.i.orig  whiz.init  whiz.init-suse  whiz.init.fc4  whiz.service  whiz.spec  whiz.spec.orig
server/: Makefile.am  whizkill.c  whizserver.cpp
